--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="work-sans-font">
     <header>
+
+        <nav class="nav-bar">
+            <h3>G3 Architects</h3>
+        </nav>
 
     </header>
     <main>
