--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     </header>
     <main>
-
+        <!-- team section strt -->
         <section class="teams display-flex">
 
             <div class="team-img-container">
@@ -49,7 +49,7 @@
             </div>
 
             <div class="our-features">
-                <h3 class="feature-title text-light-gray">
+                <h3 class="section-title text-light-gray">
                     <span id="quick-list">Quick list</span> <span class="black">of Our</span> <span
                         class="text-primary"></span>
                     Features</span>
@@ -63,6 +63,53 @@
             </div>
         </section>
 
+        <!-- features will enjjoy -->
+
+        <section>
+
+        </section>
+
+
+        <!-- some facts -->
+
+        <scetion class="some-facts">
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-gray fact-description">There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration.</p>
+
+            <div class="facts-container">
+                <!-- .fact*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name">Awards Winnings</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">22578</h4>
+                        <h5 class="fact-name">Email Send</h5>
+                    </div>
+                </div>
+            </div>
+        </scetion>
     </main>
 
     <footer>
